# dougmercer-yt

./: .gitignore  README.md
2022/0228-type-hints/: README.md  slides.md
2022/0308-dataclasses/: README.md  environment.yml  part1.md  pyproject.toml  setup.cfg
2022/0308-dataclasses/blogs/: blogs1.py  blogs2.py  blogs3.py  blogs4.py  blogs5.py  blogs6.py  blogs7.py  blogs8.py  blogs85.py  blogs9.py
2022/0308-dataclasses/tests/: test_blogs.py
2022/0615-hypothesis/: README.md  environment.yml  test_sort.py
2022/0822-pyrange/: README.md  environment.yml  my_timeit.py  pyproject.toml  setup.cfg  time_contains.py  time_iter.py  time_mixins.py
2022/0822-pyrange/pyrange/: __init__.py
2022/0822-pyrange/tests/: strategies.py  test_protocols.py  test_range.py
2022/0822-pyrange/various_versions/: pyrange1.py  pyrange10.py  pyrange11.py  pyrange12.py  pyrange2.py  pyrange3.py  pyrange4.py  pyrange5.py  pyrange6.py  pyrange7.py  pyrange8.py  pyrange9.py
2022/0926-whisper/: README.md  environment.yml
2022/1017-tortoise/: README.md
2022/1026-python311/: README.md
2022/1208-marp/: .gitignore  .gitlab-ci.yml  README.md  slides.md
2023/0124-chatgpt-swift/: README.md
2023/0611-compiled-python/: .gitignore  README.md  benchmark  benchmark.py  common_subs.py  environment.yml  juliaset.py  lcs.cpp  setup.cfg  setup.py  taichi_pi.py
2023/0611-compiled-python/lcs/: cython2.pyx  cython_.py  mypyc_.py  numba.py  numpy.py  python.py  taichi.py  taichi_field.py
2023/0814-pythonic-code/: README.md  after.py  before.py  data_provider.py  environment.yml  our_site.py  pyproject.toml
2023/0814-pythonic-code/ye_olde_data_provider/api/public/: client.py  streams.py
2023/1219-prefect/: README.md  environment.yml  original_pipeline.py  pipeline.py  pyproject.toml  setup.cfg
2023/1219-prefect/our_team/: __init__.py  backtest.py  data.py  metrics.py  models.py
2024/0413-1brc/: README.md
