[metadata]
name = our_team
description = Super amazing machine 'learning' models.
version = attr: our_team.__version__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Doug Mercer
author_email = mercer321@gmail.com

[options]
zip_safe = False
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
install_requires =
    pandas
    numpy
    typing-extensions; python_version < '3.8'
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
atd2022 = py.typed

[options.extras_require]
dev =
    black
    flake8
    hypothesis
    ipykernel
    isort
    mypy
    nb-clean
    nbqa
    pydocstyle
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
all =
    %(dev)s
    %(docs)s

[tool:pytest]
junit_family = xunit2
addopts = --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
testpaths =
	tests
    src/our_team

[flake8]
max-line-length = 88
ignore = E203,E225,W503
exclude =
    .git
    __pycache__
    .ipynb_checkpoints
    docs/source/conf.py
    build
    dist

[pydocstyle]
convention = numpy
add_ignore = D105

[mypy]
allow_redefinition = True
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
exclude = (?x)(
    ^build/.*
  )
